03-networking/ingress-nginx/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    mathlabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: swinalwaghmare/ingress-nginx
        ports:
        - containerPort: 80
